# autobots_visman

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
docs/: Makefile  camera.md  report_f22.md  report_spr23.md  slides_spr23_00_docker.md  slides_spr23_01_handy_sim.md  slides_spr23_02_pick_and_place.md  slides_spr23_docker.md  workspace.md
docs/diagrams/: gknet_docker.mmd  handy_computers.mmd  handy_nodes.mmd  pick_and_place.mmd
handy_warehouse_demo/: .prettierrc.yaml  CMakeLists.txt  package.xml
handy_warehouse_demo/launch/: arm.launch  camera_box.launch  empty_world.launch  hammer.launch  tabletop.launch
handy_warehouse_demo/models/box/: description.sdf
handy_warehouse_demo/models/textured_box/materials/scripts/: grid.material
handy_warehouse_demo/notebooks/: 2022-10-23-tabletop-calibration.ipynb  20221023-00-tabletop-calibration.ipynb  20230117-00-checkerboard.ipynb  20230117-01-camera-intrinsics.ipynb  20230118-00-camera-intrinsics.ipynb  20230118-01-camera-intrinsics.ipynb  20230118-01-chessboard.ipynb  tabletop-calibration.ipynb
handy_warehouse_demo/src/: camera.py  generate_texture.py  realsense_image_snapshot.py
handy_warehouse_demo/tests/: camera_box.test  test_camera_box.py
handy_warehouse_demo/urdf/: _d435.urdf.xacro  d435.gazebo.xacro  d435_camera.urdf.xacro
handy_warehouse_demo/worlds/: tabletop.world
reinforcement_learning/: README.md  fetch_reach.py  pyproject.toml  reacher.py
visman_learning_adventure/: CMakeLists.txt  package.xml
visman_learning_adventure/launch/: camera_box.launch  tabletop.launch  tabletop_aruco_test.launch  tabletop_calibration_box.launch  tabletop_calibration_cube.launch
visman_learning_adventure/models/calibration_box/: description.sdf  description.sdf.j2  description.yaml
visman_learning_adventure/models/calibration_box/materials/scripts/: aruco.material  grid.material
visman_learning_adventure/models/tabletop_aruco_test/: description.sdf
visman_learning_adventure/models/textured_box/: description.sdf
visman_learning_adventure/notebooks/: 20221023-00-tabletop-calibration.ipynb  20230118-01-chessboard.ipynb  20230121-00-chessboard-bugaloo.ipynb  20230123-00-aruco-opencv-test.ipynb  20230123-01-aruco-opencv-test-gazebo.ipynb  20230125-00-aruco-opencv-more-testing.ipynb  20230125-01-box-with-aruco-tags.ipynb  20230128-00-aruco-calibration-box-table.ipynb  20230128-01-aruco-calibration.ipynb  20230129-00-aruco-calibration-normalization.ipynb  20230129-01-aruco-calibration-normalization-corners.ipynb  20230129-aruco-calibration-normalization.ipynb
visman_learning_adventure/src/: camera.py
visman_learning_adventure/tests/: camera_box.test
visman_learning_adventure/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  d435_camera.urdf.xacro
