<?xml version="1.0"?>
<package format="2">
  <name>handy_warehouse_demo</name>
  <version>0.0.0</version>
  <description>The handy_warehouse_demo package</description>
  <maintainer email="acmiyaguchi@gatech.edu">Anthony Miyaguchi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <exec_depend>roslaunch</exec_depend>

  <build_depend>warehouse</build_depend>
  <exec_depend>warehouse</exec_depend>

  <export></export>
</package>
