[tool.poetry]
name = "reinforcement-learning"
version = "0.1.0"
description = "Exploration in reinforcement with manipulators"
authors = ["Anthony Miyaguchi <acmiyaguchi@gatech.edu>"]
readme = "README.md"
packages = [{include = "reinforcement_learning"}]

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = {extras = ["mujoco"], version = "^0.29.1"}
gymnasium-robotics = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
